fixed spacing

--- a/Styles/header.css
+++ b/Styles/header.css
@@ -6,7 +6,6 @@ html {
 nav a {
   font-size: 12px;
   color: #1e80ce;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   text-decoration: none;
   font-weight: bold;
 }
@@ -45,7 +44,6 @@ footer {
 table {
   font-size: 10px;
   font-weight: bold;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   color: #ffffff;
   display: flex;
   justify-content: center;
