--- a/Styles/news.css
+++ b/Styles/news.css
@@ -34,13 +34,13 @@ p {
     width: 35%;
     font-size: 30px;
     float: right;
-    margin-right: 10%;
+    margin-right: 15%;
   }
 
   h1 {
     font-size: 50px;
     margin-left: 0%;
     margin-top: 2%;
-    margin-left: 55%;
+    margin-left: 50%;
   }
 }
